@@ -1,3 +1,7 @@
+2003-10-20  Dan Espen  <dane@mk.telcordia.com>
+
+	* download/index.php: Remove download alpha releases link, out of date.
+
 2003-10-11  Uwe Pross  <uwe.pross@gmx.net>
 
 	* logo-competition/logos_new.php:
